# ticts

./: .coveragerc  .cruft.json  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .travis.yml  404.html  AUTHORS  ChangeLog  LICENSE  Makefile  README.md  README.rst  Tutorial.ipynb  changelog.html  index.html  mkdocs.yml  objects.inv  postBuild  pyproject.toml  reference.html  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml
.binder/: postBuild
.github/ISSUE_TEMPLATE/: feature_request.md  question.md
.github/workflows/: ci.yml  smokeshow.yml
docs/: Tutorial.ipynb  abbreviations.md  authors.rst  changelog.md  conf.py  index.rst  ipython_init.py  reference.md  requirements.txt
docs/_static/css/: custom_theme.css
docs/notes/: quickstart.rst
docs/src/: cli.rst  operation.rst  pandas.rst  timeseries.rst
search/: search_index.json
tests/: conftest.py  test_extension.py  test_io.py  test_iplot.py  test_operation.py  test_pandas_ext.py  test_pandas_mixin.py  test_timeseries.py
ticts/: __init__.py  cli.py  extension.py  io.py  iplot.py  operation.py  pandas_ext.py  pandas_mixin.py  testing.py  timeseries.py  utils.py
