[metadata]
name = ticts
author = See AUTHORS
author-email = "TODO@gmail.com"
summary = A Python library for unevenly-spaced time series analysis
description-file = README.rst
home-page = https://github.com/gjeusel/ticts
classifier =
    Development Status :: 4 - Beta
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    License :: MIT license
    Programming Language :: Python
    Programming Language :: Python :: 3.6

[files]
packages = ticts

# add datafile to be included in your distribution packages here, ex:
#data-files =
#    data = data/*
#    frontend = frontend/dist/*

[build_sphinx]
project = ticts
source-dir = docs
build-dir = docs/build

[upload_sphinx]
upload-dir = docs/_build/html

[pbr]
warnerrors = True

[wheel]
universal = 1

[yapf]
allow_split_before_dict_value = false

[flake8]
exclude = */migrations/*,*/south_migrations/*

[isort]
line_length = 100

[tool:pytest]
norecursedirs =
    .git
    .tox
    .env
    .eggs
    .cache
    dist
    build
    south_migrations
    migrations
    chunk_scripts
python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    --tb=short
    --cov-report=term-missing
    --cov=ticts
